--- a/deploy/sigma/templates/worker/deployment.yaml
+++ b/deploy/sigma/templates/worker/deployment.yaml
@@ -29,6 +29,20 @@ spec:
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       serviceAccountName: {{ include "sigma.fullname" . | quote }}
+      initContainers:
+        - name: check-middlewares
+          image: {{ printf "%s/%s:%s" .Values.image.registry .Values.image.repository .Values.image.tag | quote }}
+          imagePullPolicy: {{ .Values.image.pullPolicy }}
+          command:
+            - "/bin/bash"
+            - "-c"
+            - |-
+              set -e;
+              echo "Waiting for sigma middlewares to be ready...";
+              sigma \
+                tools \
+                middleware-checker;
+              echo "sigma middlewares are all ready";
       containers:
         - name: {{ include "sigma.worker" . | quote }}
           securityContext:
