--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@bytemd/plugin-gfm": "^1.21.0",
     "@bytemd/react": "^1.21.0",
+    "@codemirror/language": "^6.10.3",
+    "@codemirror/legacy-modes": "^6.4.1",
+    "@codemirror/view": "^6.34.1",
     "@headlessui/react": "^2.1.8",
     "@heroicons/react": "^2.1.5",
     "@monaco-editor/react": "^4.6.0",
@@ -18,6 +21,10 @@
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.15",
+    "@uiw/react-codemirror": "^4.23.5",
+    "@xterm/addon-attach": "^0.11.0",
+    "@xterm/addon-fit": "^0.10.0",
+    "@xterm/xterm": "^5.5.0",
     "axios": "^1.7.7",
     "bytemd": "^1.21.0",
     "clsx": "^2.1.1",
@@ -35,11 +42,8 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
-    "react-toastify": "^10.0.5",
+    "react-toastify": "^10.0.6",
     "react-use": "^17.5.1",
-    "xterm": "^5.3.0",
-    "xterm-addon-attach": "^0.9.0",
-    "xterm-addon-fit": "^0.8.0",
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
@@ -56,5 +60,5 @@
     "typescript": "^5.6.2",
     "vite": "^5.4.6"
   },
-  "packageManager": "yarn@4.3.1"
+  "packageManager": "yarn@4.5.0"
 }
